pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxDuplicateEntry1.pkl
local source {
  ["foo"] = 1
}

res: Mapping = new {
  ...source
  ["foo"] = 2
}
